tests/paczka1/small_fuzzy/28681305.err
Error in line 1: A834 S0 64,4
Error in line 6: 1rWHxn6bDI S0 42,2
Error in line 7: A834 S0 268,5
Error in line 9: J8hHzRvcx S0 44,3
Error in line 12: 1rWHxn6bDI S0 94,0
Error in line 13: 6Y5i9Pi2QfU S0 81,5
Error in line 14: 6Y5i9Pi2QfU S0 242,1
Error in line 16: 1rWHxn6bDI S0 57,4
